Added t0, t1 to Job class

--- a/CHANGES
+++ b/CHANGES
@@ -711,6 +711,9 @@ Containers
 Bugs
 - Changed logger.warning -> pUtil.tolog in detect_client_location(), reported by Javier Sanchez Martinez (pilot)
 
+Timing info
+- Added t0, t1 to Job class (Job)
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 TODO:
