--- a/CHANGES
+++ b/CHANGES
@@ -713,6 +713,7 @@ Bugs
 
 Timing info
 - Added t0, t1 to Job class (Job)
+- Added preliminary version of convert_ostime_txt_to_tuple() (pUtil)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
