Moved convert_ostime_txt_to_tuple() from pUtil to FileHandling

--- a/CHANGES
+++ b/CHANGES
@@ -713,7 +713,7 @@ Bugs
 
 Timing info
 - Added t0, t1 to Job class (Job)
-- Added convert_ostime_txt_to_tuple() (pUtil)
+- Added convert_ostime_txt_to_tuple() (FileHandling)
 - Writing t0 to file in executePayload() (RunJob)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
