Added detect_client_location() fix

--- a/CHANGES
+++ b/CHANGES
@@ -698,6 +698,17 @@ QMUL metadata fix
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+72.11 - HOTFIX
+
+Rucio copytool update (from M. Lassnig):
+- Removed troublesome API fallback (rucio_sitemover)
+- Added -v option for more verbose output (rucio_sitemover)
+
+Bug fix:
+- Changed logger.warning -> pUtil.tolog in detect_client_location(), reported by Javier Sanchez Martinez (pilot)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
