--- a/CHANGES
+++ b/CHANGES
@@ -713,8 +713,9 @@ Bugs
 
 Timing info
 - Added t0, t1 to Job class (Job)
-- Added convertOsTimeTxt2Tuple() (FileHandling)
+- Added getOsTimesTuple() (FileHandling)
 - Writing t0 to file in executePayload() (RunJob)
+- Setting CPU consumption time in __updateJobs() (i.e. just before heartbeat update) (Monitor)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
