--- a/CHANGES
+++ b/CHANGES
@@ -712,9 +712,9 @@ Bug fix:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-72.12
+72.12 - SPECIAL NORDUGRID RELEASE
 
-SPECIAL NORDUGRID VERSION with support for PILOT_NOKILL env variable
+Support for PILOT_NOKILL env variable
 - If PILOT_NOKILL is defined, the pilot aborts killOrphans() early (processes)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
