--- a/CHANGES
+++ b/CHANGES
@@ -736,6 +736,7 @@ Timing info
 - Setting CPU consumption time in __updateJobs() (i.e. just before heartbeat update) (Monitor)
 - Using get_instant_cpu_consumption_time() in __updateJobs() for checking CPU consumption on the fly (Monitor)
 - Updated code to use get_cpu_consumption_time() instead of setTimeConsumed() (RunJob*)
+- Removed unused setTimeConsumed() (pUtil)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
