--- a/CHANGES
+++ b/CHANGES
@@ -737,6 +737,7 @@ Timing info
 - Using get_instant_cpu_consumption_time() in __updateJobs() for checking CPU consumption on the fly (Monitor)
 - Updated code to use get_cpu_consumption_time() instead of setTimeConsumed() (RunJob*)
 - Removed unused setTimeConsumed() (pUtil)
+- Creating t0_times.txt file also in RunJobEvent (RunJobEvent)
 
 Google related fix
 - Added https:// protocol to allowed_replica_schemas in is_directaccess() (Job)
