--- a/CHANGES
+++ b/CHANGES
@@ -741,7 +741,9 @@ Timing info
 
 Tracing
 - Removed any present escape characters in the stateReason field in sendTrace() (mover)
+( out-commented for now, take back in release 73.1+
 - Switched off sending tracing report if rucio copytool is used (and back on if necessary), in stagein_real(), stageout() (mover)
+)
 
 Google related fix
 - Added https:// protocol to allowed_replica_schemas in is_directaccess() (Job)
