--- a/CHANGES
+++ b/CHANGES
@@ -738,6 +738,7 @@ Timing info
 - Updated code to use get_cpu_consumption_time() instead of setTimeConsumed() (RunJob*)
 - Removed unused setTimeConsumed() (pUtil)
 - Creating t0_times.txt file also in RunJobEvent (RunJobEvent)
+- Added cpid to env (environment)
 
 Tracing
 - Removed any present escape characters in the stateReason field in sendTrace() (mover)
