--- a/CHANGES
+++ b/CHANGES
@@ -738,7 +738,8 @@ Timing info
 - Updated code to use get_cpu_consumption_time() instead of setTimeConsumed() (RunJob*)
 - Removed unused setTimeConsumed() (pUtil)
 - Creating t0_times.txt file also in RunJobEvent (RunJobEvent)
-- Added cpid to env (environment)
+- Writing and reading child pid to/from file (RunJob, RunJobEvent, Monitor)
+- Created get_current_cpu_consumption_time() (processes)
 
 Tracing
 - Removed any present escape characters in the stateReason field in sendTrace() (mover)
