Updated log messates about tail

--- a/CHANGES
+++ b/CHANGES
@@ -100,6 +100,14 @@ M movers/mover.py (2)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.1
+
+Log tailing (requested by R. Walker)
+- Created get_files(), removed old implementation of tail(), added a new version of tail() [FileHandling]
+- Now adding the tail of the latest found log file in the payload workdir, in __updateJobs() [Monitor]
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
