--- a/CHANGES
+++ b/CHANGES
@@ -145,6 +145,12 @@ M movers/mover.py (12)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.4
+
+Code cleanup
+- Removed deprecated functions: getTURLFileInfoDic(), updatePFN(), getDefaultStorage() (Mover)
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
