--- a/CHANGES
+++ b/CHANGES
@@ -149,6 +149,19 @@ M movers/mover.py (12)
 
 Code cleanup
 - Removed deprecated functions: getTURLFileInfoDic(), updatePFN(), getDefaultStorage() (Mover)
+
+Updates from W. Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/221
+
+Commit Summary
+
+fix for es merge stagein
+
+File Changes
+
+M movers/mover.py (17)
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
