Now making sure that stdout_tail is not None before trying to use it in updatePandaServer() (PandaServerClient)

--- a/CHANGES
+++ b/CHANGES
@@ -197,6 +197,12 @@ M movers/mover.py (7)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.5
+
+Bug fix:
+- Now making sure that stdout_tail is not None before trying to use it in updatePandaServer() (PandaServerClient)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 TODO:
 
