--- a/CHANGES
+++ b/CHANGES
@@ -203,6 +203,8 @@ Bug fixes:
 - Now making sure that stdout_tail is not None before trying to use it in updatePandaServer() (PandaServerClient)
 - Stopped setting PQ as default local/remoteSite in Rucio traces Created getRSE(ddmEndPoints) (Mover)
 - Added missing string to int conversion in os.killpg() call for orphaned processes (processes)
+- Added safer handling of stdout_tail variable to prevent discovered lost heartbeat as suggested in GGUS ticket https://ggus.eu/?mode=ticket_info&ticket_id=137637,
+  in updatePandaServer() (PandaServerClient)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
