--- a/CHANGES
+++ b/CHANGES
@@ -217,6 +217,10 @@ New error code
 Replicas
 - Now always setting geoip in list_replicas() call, resolve_replicas() (mover)
 
+Log file creation, requested by R. Walker:
+- Added HAHM_ggf_ZZd_4l_mZd15 to removeRedundantFiles() (ATLASExperiment)
+- Added --one-file-system to the tar command in createLogFile() (JobLog)
+
 Updates from Tomas Javurek:
 
   https://github.com/PanDAWMS/pilot/pull/227
