--- a/CHANGES
+++ b/CHANGES
@@ -221,6 +221,9 @@ Log file creation, requested by R. Walker:
 - Added HAHM_ggf_ZZd_4l_mZd15 to removeRedundantFiles() (ATLASExperiment)
 - Added --one-file-system to the tar command in createLogFile() (JobLog)
 
+Support for new prodSourceLabel, requested by A. da Silva et al:
+- Added -i ALRB and prodSourceLabel=rc_alrb to getProdSourceLabel() (pilot)
+
 Updates from Tomas Javurek:
 
   https://github.com/PanDAWMS/pilot/pull/227
