--- a/CHANGES
+++ b/CHANGES
@@ -218,7 +218,7 @@ Replicas
 - Now always setting geoip in list_replicas() call, resolve_replicas() (mover)
 
 Log file creation, requested by R. Walker:
-- Added HAHM_ggf_ZZd_4l_mZd15 to removeRedundantFiles() (ATLASExperiment)
+- Added HAHM_* to removeRedundantFiles() (ATLASExperiment)
 - Added --one-file-system to the tar command in createLogFile() (JobLog)
 
 UCORE scaling correction, requested by R. Walker:
