--- a/CHANGES
+++ b/CHANGES
@@ -255,6 +255,16 @@ M movers/rucio_sitemover.py (19)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.7:
+
+Updates from Tomas Javurek:
+
+https://github.com/PanDAWMS/pilot/pull/229/
+
+[missing comments; ask Tomas]
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
