--- a/CHANGES
+++ b/CHANGES
@@ -277,7 +277,9 @@ Comments added by Paul:
 
 Updates from Frank Berghaus:
 
-Test jobs running against the Dynafed at CERN attempting to benchmark its performance failed because the pilot does not allow dav for direct access. We would like to proceed with these test, also for benchmarking WebDAV against XRootD in general. For this we would like to allow direct access with davs.
+Test jobs running against the Dynafed at CERN attempting to benchmark its performance failed because the pilot does not
+allow dav for direct access. We would like to proceed with these test, also for benchmarking WebDAV against XRootD in
+general. For this we would like to allow direct access with davs.
 
 From the ROOT perspective both WebDAV and HTTP are implemented by TDavixFile. Both protocols should be allowed for direct access on LAN.
 
