Removed davs protocol from allowed direct access schemas

--- a/CHANGES
+++ b/CHANGES
@@ -252,7 +252,6 @@ File Changes
 M movers/mover.py (10)
 M movers/rucio_sitemover.py (19)
 
-
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 73.7:
@@ -313,6 +312,13 @@ M Job.py (3)
 M RunJobEvent.py (27)
 M movers/mover.py (14)
 M movers/objectstore_sitemover.py (15)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+73.8:
+
+Davs in direct access
+- Removed davs protocol from allowed direct access schemas (Job, mover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
