Patch for an unhandled exception in rucio API (mover stageOut() function) leading to a false-positive situation where a failed stage-out was reported as successful

--- a/CHANGES
+++ b/CHANGES
@@ -322,6 +322,13 @@ Davs in direct access
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.9:
+
+Patch for an unhandled exception in rucio mover stageOut() function leading to a false-positive situation where a failed
+stage-out was reported as successful (rucio_sitemover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
