--- a/CHANGES
+++ b/CHANGES
@@ -329,6 +329,23 @@ stage-out was reported as successful (rucio_sitemover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.10:
+
+Updates from Wen Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/237
+
+Commit Summary
+
+disable verify for objectstore stageout
+
+File Changes
+
+M movers/objectstore_sitemover.py (8)
+M movers/rucio_sitemover.py (10)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
