Benchmark termination fix - added missing break

--- a/CHANGES
+++ b/CHANGES
@@ -361,6 +361,14 @@ M movers/rucio_sitemover.py (8)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.11:
+
+Benchmarking bug fix
+- Added missing break after benchmark termination. Previously benchmark command could not be terminated if they ran
+  for longer than the allowed time (RunJob)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
