Moved back offending rucio imports from module header to where they are used (rucio_sitemover)

--- a/CHANGES
+++ b/CHANGES
@@ -414,6 +414,13 @@ M movers/rucio_sitemover.py (72)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.13
+
+Nordugrid patch
+- Moved back offending rucio imports from module header to where they are used (rucio_sitemover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
