New version of detect_client_location()

--- a/CHANGES
+++ b/CHANGES
@@ -447,6 +447,13 @@ https://github.com/PanDAWMS/pilot/pull/241.diff
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.14
+
+IPv6
+- New version of Rucio function detect_client_location() that is IPv6 compatible has been added (pilot)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
